--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -1,23 +1,18 @@
-.button {
+.button{
     width: 150px;
     height: 30px;
+    background-color:  $main-color;
     border-radius: 5px;
-    background-color: $main-color;
     border: none;
-    color: #ffffff;
-    font-size: 12px;
     font-weight: 500;
+    font-size: 12px;
     text-transform: uppercase;
-    &_main {
-        margin-top: 67px;
+    text-align: center;
+    color: #fff;
+    &_main{
         width: 300px;
         height: 50px;
         font-size: 16px;
-    }
-    &_submit {
-        width: 100%;
-        height: 55px;
-        color: #ffffff;
-        font-size: 16px;
+        margin-top: 67px;
     }
 }
