--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -41,7 +41,7 @@
         display: none;
         justify-content: space-between;
         flex-wrap: wrap;
-        overflow: hidden; /* Чтобы скрывать содержимое, пока высота 0 */
+        overflow: hidden; 
         opacity: 0;      /* Начальное состояние прозрачности */
         max-height: 0;   /* Начальная высота для перехода */
         transition: max-height 0.5s ease-out, opacity 0.5s ease-out; /* Переходы для высоты и прозрачности */
