--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -12,6 +12,11 @@
         padding: 50px 68px 60px 68px;
 
     }
+    &__map{
+        width: 100%;
+        height: 630px;
+        border: 0;
+    }
     &__addr{
         margin-bottom: 36px;
         color: white;
