--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,7 +1,18 @@
+@import 'libs/bootstrap-reboot.min';
+@import 'libs/animate';
+@import 'libs/font';
+@import 'libs/slick';
+
+
 @import 'base/variables';
+
+
+@import 'base/animations';
+
 * {
     font-family: 'Museo Sans Cyrl', sans-serif;
 }
+
 .container {
     max-width: 950px;
     margin: 0 auto;
@@ -20,4 +31,3 @@
 @import 'blocks/footer';
 @import 'blocks/modal';
 @import 'blocks/pageup';
-@import 'base/animations';
